hostpath.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: hostpath
  name: hostpath 
spec:
  containers:
  - image: nginx
    name: hostpath
    volumeMounts:
    - mountPath: /hostpath
      name: hostpath-volume
  volumes:
    - name: hostpath-volume
      hostPath: 
        path: /myhostpath
        type: DirectoryOrCreate
