ingresspod_app1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app1
  labels:
    app: app1
spec:
  containers:
  - name: nginx-app1
    image: nginx
    ports:
    - containerPort: 8080
