ingresspod_app2.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app2
  labels:
    app: app2
spec:
  containers:
  - name: nginx-app2
    image: nginx
    ports:
    - containerPort: 8080
