initcontr.yml
apiVersion: v1
kind: Pod
metadata:
  name: myinitcon
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: nginx
