ingress_service1.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service1
spec:
  selector:
    app: app1
  ports:
    - port: 80
      protocol: TCP
