ingress_service2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
spec:
  selector:
    app: app2
  ports:
    - port: 80
      protocol: TCP
