dashboardingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedashboard-ingress
  annotations:
    kubernetes.io/ingress.class:  "nginx"
spec:
  rules:
  - host: kubedashboard.test.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port:
             number: 80
